--- a/Burger/pageburgrill.css
+++ b/Burger/pageburgrill.css
@@ -1,52 +1,268 @@
-#logo{
-    border: 1px solid black ;
-    border-radius: 0em;
+#navbar{
+    display: flex;
+    align-items: center;
+    position: relative;
+    top: 0px;
 }
- .navig {
-    overflow: hidden;
-   
-}
-.navig a{
-    color: black;
-    text-align: center;
-    padding: 16px 93px;
-    margin-left: 0rem;
-    background-color: rgb(212, 228, 68);
-    float: right;
-    display: inline;
 
+#navbar::before{
+    content: "";
+    background-image: none;
+    position: absolute;
+    top:0px;
+    left:0px;
+    height: 100%;
+    width:100%;
+    z-index: -1;
+    opacity: 0.7;
 }
-.navig > a:hover{
-    color: crimson;
-    background-color: darkgrey;
+
+/* Navigation Bar: Logo and Image */
+#logo{
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
 }
-body{
-    background-image: url(bgburg.jpg);
-    background-size: 95% 165%;
+
+#logo img{
+    height: 100px;
+    width: 100px ;
+    margin: 3px 6px;
 }
+
+
+/* Navigation Bar: List Styling */
+
+#navbar ul{
+    display: flex;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+
+#navbar ul li{ 
+    list-style: none;
+    font-size: 1.3rem;
+}
+
+#navbar ul li a{
+    color: white;
+    display: block;
+    padding: 3px 22px;
+    border-radius: 10px;
+    text-decoration: none;
+}
+
+#navbar ul li a:hover{
+    color: black;
+    background-color: white;
+}
+
+#home {
+    display: flex;
+    flex-direction:column ;
+    padding-left: 5px;
+    height: 550px;
+    align-items: flex-start;
+}
+#home::before{ 
+    content: "";
+    position: absolute;
+    background: url('bg1.jpg') no-repeat center center/cover;
+    height: 642px;
+    top:0px;
+    left:0px;
+    width: 100%;
+    z-index: -1;
+    opacity:0.89;
+}
+
+span::before {
+    content: " ";
+    animation: animate infinite 2s;
+    padding: 8px;
+    font-size: 20px;;
+    display: block;
+    border: 2px solid;
+    border-radius: 6px;
+    width: fit-content;
+}
+
+@keyframes animate {
+
+    0% {
+        content: " ";
+    }
+
+    50% {
+        content: "Now available in your Town.. Visit Now";
+    }
+}
+
 .tom > h1{
     color: rgb(255, 255, 255);
-    text-align: center;
+    text-align: left;
     font-size: 75px;
     font-family: Lucida handwriting,  sans-serif;
 }
-.tom > h3{
-    margin-top: 20px;
-    text-align: center;
+.tom > h2{
+    margin-top: 5px;
+    text-align: left;
     text-transform: uppercase;
     font-family: 'Times New Roman', Times, serif;
-
     color: cornsilk;
-
 }
-#butt{
-    background-color: rgb(91, 232, 236);
+.tom > h5{
+    color: white;
+    padding: 5px;
+}
+
+.butt{
+    background-color: rgb(68, 228, 193);
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    margin-left:  610px;
-    margin-top: 25px;
-    padding: 15px;
-    border: black 2.5px ;
-    border-radius: 10px;
+    padding: 10px;
+    margin-top: 5px;
+    border-radius: 25px;
     font-size: 1.5em;
 }
+
+#services{
+    margin: 30px;
+    display: flex;
+}
+.c-service{
+    text-align: center;
+    margin-top: 8px;
+    font-size: 50px;
+}
+
+#services .box{ 
+    border: 2px solid rgb(126, 16, 16);
+    padding: 34px;
+    margin: 2px 18px;
+    border-radius: 20px;
+    background: #85e6fa;
+    margin-bottom: 20px;
+}
+
+#services .box img{ 
+   height: 160px;
+   margin: auto;
+   display: block;
+}
+
+#services .box p{
+    font-family: Georgia, 'Times New Roman', Times, serif
+} 
+.h-secondary{
+    font-size: x-large;
+    text-align: center;
+}
+
+.c-taste{
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 18px;
+    font-size: 45px;
+}
+#client-section::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.3;
+   }
+#sect1{
+    background-color: pink;
+   }
+#clients{
+       display: flex;
+       justify-content: center;
+       align-items: center;
+   }
+.client-item{
+       padding: 20px;
+   }
+   
+#clients .client-item img{
+       width: 130px;
+       height: 130px;
+       margin-left: 10px;
+       margin-right: 10px;
+       transition: 0.5s ease-in-out;
+   }
+#clients .client-item:hover img{
+    transform: scale(1.3);
+}
+
+.c-contact{
+    text-align: center;
+    margin-top: 14px;
+    margin-bottom: 5px;
+    padding: 0%;
+    font-size: 45px;
+}
+#contact::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.7;
+    /* background: url('../contact.jpg') no-repeat center center/cover; */
+
+}
+#contact-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 34px;
+    margin: 0px;
+}
+#contact-box input{
+    width: 100%;
+    padding: 0.7rem;
+    border-radius: 5px;
+    font-size: 1rem;
+    margin-top: 5px;
+} 
+
+#contact-box form{
+    width: 40%;
+}
+
+#contact-box label{
+   font-size: 1.3rem;
+   font-family: 'Bree Serif', serif;
+   font-weight: bold;
+}
+
+#footer {
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    width: 100%;
+    background-color: #a3a9b0;
+    color: #fff;
+    font-size: large;   
+}
+
+#footer p{
+    animation-duration: 4s;
+    animation-name: slidein;
+  }
+  
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%;
+    }
+  
+    to {
+      margin-left: 45%;
+      width: 100%;
+    }
+  }
+
+   
